# Oskars_cookiecutter

./: LICENSE  Makefile  README.md  pyproject.toml
Oskars_cookiecutter/: __init__.py
Oskars_cookiecutter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: example_images.npy
docs/: mkdocs.yaml
docs/source/: index.md
models/runs/: my_model.pth
